# puj-mlops_-group3

./: .gitignore
.github/workflows/: ci-cd.yml  project-4.yaml
0/: main.py
0-actividad-docker/: Dockerfile  docker-compose.yml  docker_commands.txt  main.py  requirements.txt
0-actividad-docker/joblibs/: lightgbm.joblib  log_reg.joblib  random_forest.joblib  scaler.joblib
0/docker/: docker
0/model/: kmeans_model.joblib  random_forest_model.joblib
1/Exploracion/: .md
1/Exploracion/dockercompose/: docker-compose.yml
1/Exploracion/fastapi-ml-project/: hello.py  pyproject.toml
1/Taller/: .md  README.md
1/Taller/app/: Dockerfile.fastapi  Dockerfile.jupyter  docker-compose.yml  main.py  pyproject.toml  training.ipynb
2/: README.md  docker-compose.yaml
2-mlflow/: README.md  docker-compose.yaml  mlflow_serv.service  pyproject.toml  restart_script.sh
2-mlflow/ml-components/: docker-compose.yaml
2-mlflow/ml-components/app/: main.py  pyproject.toml
2-mlflow/ml-components/jupyter-env/: Dockerfile.jupyter  preprocess.py  pyproject.toml  training.ipynb  utils.py
2/dags/: dag_clean_data.py  dag_clean_train.py  dag_clear_database.py  dag_load_data.py  dag_model_data.py  ssh_preprocess.py
2/ml-training/: Dockerfile.jupyter  preprocess.py  pyproject.toml
3/3-taller-locust/: README.md  docker-compose.yaml
3/3-taller-locust/app/: Dockerfile  main.py  pyproject.toml
3/3-taller-locust/locust/: locustfile.py
3/3-taller-observabilidad/api/: Dockerfile  api.py  requirements.txt
4/taller-ci-cd/: README  README.md
4/taller-ci-cd/api-inferencia/: Dockerfile
4/taller-ci-cd/api-inferencia/app/: main.py  params.yaml  pyproject.toml  train_model.py
4/taller-ci-cd/argo-cd/: app.yaml
4/taller-ci-cd/locust/: Dockerfile  locustfile.py
4/taller-ci-cd/manifests/: api.yaml  grafana-configMap.yaml  grafana-dashboard-provider.yaml  grafana-datasource.yaml  grafana.yaml  kustomization.yaml  locust.yaml  namespace.yaml  prometheus.yaml
proyectos/proyecto-1/: Dockerfile  Dockerfile.jupyter  README.md  docker-compose.yml  notebook-ejecutado.ipynb  notebook.ipynb  pyproject.toml
proyectos/proyecto-2/: README.md  docker-compose.yaml
proyectos/proyecto-2/airflow/: Dockerfile  pyproject.toml
proyectos/proyecto-2/api-data/: Dockerfile  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  main.py  pyproject.toml
proyectos/proyecto-2/app/: main.py  pyproject.toml
proyectos/proyecto-2/mlflow/: Dockerfile.mlflow  pyproject.toml
proyectos/proyecto-2/mysql-init/: init.sql
proyectos/proyecto-2/streamlit/: Dockerfile  requirements.txt  streamlit_app.py
proyectos/proyecto-3/: README.md  project-namespace.yaml
proyectos/proyecto-3/airflow/: .env-example  docker-compose.yaml
proyectos/proyecto-3/grafana/: deployment.yaml
proyectos/proyecto-3/inference-api/: Dockerfile  main.py  (+2 more)
proyectos/proyecto-4/: README.md
proyectos/proyecto-4/apps/airflow/image/: Dockerfile  pyproject.toml
proyectos/proyecto-4/apps/inference-api/: Dockerfile  pyproject.toml
proyectos/proyecto-4/apps/inference-api/app/: main.py
(+61 files in other folders)
