[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "scikit-learn==1.4.0",
    "lightgbm==4.5.0",
    "jupyter==1.0.0",
    "jupyterlab==3.6.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.2.0",
    "sqlalchemy>=2.0.39",
    "requests>=2.32.3",
    "pymysql>=1.1.1",
    "mlflow>=2.21.0",
]
