[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.1.4",
    "psutil==6.1.1",
    "scikit-learn==1.6.1",
    "mlflow>=2.21.0",
    "pydantic>=2.10.6",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "boto3>=1.37.15",
]
