[project]
name = "2-mlflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "awscli>=1.38.13",
    "boto3>=1.37.13",
    "mlflow>=2.21.0",
    "pymysql>=1.1.1",
    "mysql-connector-python>=9.2.0",
    "pip",
    "sqlalchemy>=2.0.39",
    "cryptography>=44.0.0",
]
